# personal-photo-editor

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  FEEDBACK.md  Makefile  README.md
.agents/: README.md  engineering-workflow.md  film-emulation.md  interaction-contracts.md  product-context.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/icons/: README.md
assets/symbols/: README.md
docs/: film-stock-century-canon.md  learned-film-styles.md
resources/macos/: README.md
scripts/: build_macos_app.sh  build_visual_report.py  check.sh  dev.sh  doctor.sh  extract_visual_captures.py  fetch_visual_fixtures.py  generate_default_icon.swift  generate_visual_fixtures.py  learn_film_style.py  learn_film_style.sh  measure_grain_response.js  prepare_app_icon.swift  run_visual_tests.sh  setup.sh  test_grain_model.js  test_learn_film_style.py  validate_app_icon.swift
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/visual/: README.md  fixture-manifest.json
ui/: gpu.js  grain.js  index.html  main.js  style.css
ui/film-stocks/: README.md  index.json
ui/film-stocks/color/: bleach-bypass.json  chrome-64.json  cinema-500t.json  night-process.json  portrait-400.json  soft-chrome.json  vivid-100.json
ui/film-stocks/learned/: README.md
ui/film-stocks/mono/: delta-100.json  infrared-400.json  tri-x-400.json
ui/film-stocks/utility/: clean-scan.json  contact-proof.json
ui/shaders/: photo.wgsl
(+98 files in other folders)
