[package]
name = "macos_tauri_template"
version = "0.1.0"
edition = "2024"
description = "GitHub template for modern macOS desktop apps built in Rust with Tauri"
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
