[package]
name = "grainlab"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "A keyboard-first photo development console for macOS"
license.workspace = true
publish = false

[dependencies]
tauri = { version = "2.11.5", default-features = false, features = ["compression", "wry"] }

[build-dependencies]
serde_json = "1.0.150"
tauri-build = { version = "2.6.3", features = [] }

[lints]
workspace = true
